--- a/documentation/report/report.tex
+++ b/documentation/report/report.tex
@@ -321,6 +321,21 @@
     generated each time quantum and a high potential work to complete each
     process that the CPU will be overwhelmed even quicker.
 
+\section{Conclusion}
+  The results from the test experiment seem reasonable. Additionally, the
+  interface between $\gamma$ and the system is just a matter of coding the
+  implementation of the scheduling algorithm and its respective data sctructures
+  in C then modifying conduct$\_$test(). For these reasons, I would argue that
+  this tool accomplishes, at least at a base level, its goal.
+
+\section{Project Next Steps}
+  The next step would be 100$\%$ implementing the genericity to the clients that
+  handle the work execution (i.e. tweaking the way that the cpu interacts with
+  the scheduling algorithm).
+  \par
+  Additionally, implementing other algorithms to give some comparison among
+  $\gamma$ would be a high priority for this project in the future.
+
 \section{Final Scope of Project}
   \begin{itemize}
     \item 1350 lines of C code
